# sgminer

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  ChangeLog  FAQ  MCast.java  Makefile.am  NEWS.md  README.md  SCRYPT-README  adl.c  adl.h  adl_functions.h  algorithm.c  algorithm.h  animecoin.c  api-example.c  api-example.php  api-example.py  api.c  api.h  autogen.sh  bench_block.h  cgminer.c  compat.h  config_parser.c  config_parser.h  configure.ac  darkcoin.c  driver-opencl.c  driver-opencl.h  elist.h  events.c  events.h  example.bat  example.conf  findnonce.c  findnonce.h  fuguecoin.c  (+25 more)
ADL_SDK/: readme.txt
algorithm/: animecoin.c  animecoin.h  bitblock.c  bitblock.h  darkcoin.c  darkcoin.h  fresh.c  fresh.h  fuguecoin.c  fuguecoin.h  groestlcoin.c  groestlcoin.h  inkcoin.c  inkcoin.h  lyra2.c  lyra2.h  lyra2re.c  lyra2re.h  marucoin.c  marucoin.h  maxcoin.c  myriadcoin-groestl.c  myriadcoin-groestl.h  neoscrypt.c  neoscrypt.h  pluck.c  pluck.h  quarkcoin.c  quarkcoin.h  qubitcoin.c  qubitcoin.h  scrypt.c  scrypt.h  sifcoin.c  sifcoin.h  sponge.c  sponge.h  talkcoin.c  talkcoin.h  twecoin.c  (+7 more)
ccan/opt/: helpers.c  opt.c  usage.c
compat/: Makefile.am
compat/jansson-2.5/src/: dump.c  hashtable.c  load.c  memory.c  strbuffer.c  value.c
doc/: API  API.md  BUGS.md  CONFIGURATION  FAQ  FAQ.md  GPU  KERNEL.md  MINING.md  SCRYPT  coding.md  configuration.md  cygwin-build.txt  kernel.md  windows-build.txt
kernel/: Lyra2.cl  Lyra2RE.cl  aes_helper.cl  alexkarnew.cl  alexkarold.cl  animecoin.cl  arebyp.cl  bitblock.cl  bitblockold.cl  blake.cl  bmw.cl  bufius.cl  ckolivas.cl  cubehash.cl  darkcoin-mod.cl  darkcoin.cl  diamond.cl  echo.cl  fugue.cl  fuguecoin.cl  groestl.cl  groestl256.cl  groestlcoin.cl  hamsi.cl  hamsi_helper.cl  hamsi_old.cl  inkcoin.cl  jh.cl  keccak.cl  luffa.cl  marucoin-mod.cl  marucoin-modold.cl  marucoin.cl  maxcoin.cl  myriadcoin-groestl.cl  neoscrypt.cl  panama.cl  psw.cl  quarkcoin.cl  qubitcoin.cl  (+11 more)
man/: sgminer.1
ocl/: binary_kernel.c  binary_kernel.h  build_kernel.c  build_kernel.h  patch_kernel.c  patch_kernel.h
sph/: Makefile.am  aes_helper.c  blake.c  bmw.c  cubehash.c  echo.c  fugue.c  groestl.c  hamsi.c  hamsi_helper.c  jh.c  keccak.c  luffa.c  md_helper.c  panama.c  sha2.c  sha2big.c  shabal.c  shavite.c  simd.c  skein.c  sph_bmw.h  sph_cubehash.h  sph_echo.h  sph_fugue.h  sph_hamsi.h  sph_jh.h  sph_keccak.h  sph_luffa.h  sph_shavite.h  sph_simd.h  sph_skein.h  whirlpool.c
submodules/: Makefile.am
tools/: update_changelog.sh
winbuild/: .gitignore  MakefileBuild.vc  README.txt  sgminer.sln  sgminer.vcxproj  sgminer.vcxproj.filters
winbuild/jansson/: jansson.vcxproj  jansson.vcxproj.filters  jansson_config.h  jansson_private_config.h
